<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:shape="oval"
    android:id="@+id/mainpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
   
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".mainpg" >

    <RelativeLayout
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="184dp"
        android:background="#FFFFFF"
        android:keepScreenOn="true" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="#FF0080"
            android:textSize="48sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/logo"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/intro"
            android:textColor="#FF0080"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="34dp"
            android:contentDescription="@string/footer"
            android:layout_marginTop="8dp"
            android:src="@drawable/logo" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="0.07"
        android:background="#FFFFFF" >

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/quiet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/quiet"
                android:textColor="#FE2EC8"
                android:textSize="22sp"
                android:textStyle="bold"
                android:typeface="sans"  />

            <TextView
                android:id="@+id/average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/average"
                android:textColor="#FE2EC8"
                android:textSize="22sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/busy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/busy"
                android:textColor="#FE2EC8"
              android:textSize="22sp"
                android:textStyle="bold"
                android:typeface="sans"  />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ratings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="60dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/low" 
                android:contentDescription="@string/quiet"/>

            <ImageView
                android:id="@+id/med"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:src="@drawable/med" 
                android:contentDescription="@string/average"/>

            <ImageView
                android:id="@+id/high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:src="@drawable/high" 
                android:contentDescription="@string/busy"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0.87"
        android:background="#FFFFFF" >

        <Button
            android:id="@+id/rating"
            android:layout_width="98dp"
            android:layout_height="98dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/pink_rate"
            android:gravity="center" />

        <TextView
            android:id="@+id/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rating"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="13dp"
            android:text="@string/go"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#4C0B5F" />

    </RelativeLayout>

</LinearLayout>